--- a/_posts/2020-02-18-TLI.md
+++ b/_posts/2020-02-18-TLI.md
@@ -19,3 +19,8 @@ comments: true
 [지인 추천 일자리 플랫폼 '원티드' 이복기 대표](https://brunch.co.kr/@bassj/82){:target="_blank"}
 
 [비욘드스페이스](https://brunch.co.kr/@beyondspace#articles){:target="_blank"}
+
+[사이드 프로젝트하고 싶다면, 여길 참고하시라](https://brunch.co.kr/@moneyfire/264){:target="_blank"}
+
+[국내 뉴스레터를 싹 다 모아봤다](https://brunch.co.kr/@moneyfire/256){:target="_blank"}
+-🗞 뉴스레터가 트랜드 인가??
