제목 크기 수정

--- a/_posts/2020-02-20-TIL.md
+++ b/_posts/2020-02-20-TIL.md
@@ -5,19 +5,19 @@ author: Derek Choi
 comments: true
 ---
 
-# 개발
+## 개발
 
-## backend
+### backend
 [스타트업 개발자 혼자 빠르게 싸게 서버 구축하기 - 3편](https://www.popit.kr/%EC%8A%A4%ED%83%80%ED%8A%B8%EC%97%85-%EA%B0%9C%EB%B0%9C%EC%9E%90-%ED%98%BC%EC%9E%90-%EB%B9%A0%EB%A5%B4%EA%B2%8C-%EC%8B%B8%EA%B2%8C-%EC%84%9C%EB%B2%84-%EA%B5%AC%EC%B6%95%ED%95%98%EA%B8%B0-3%ED%8E%B8){:target="_blank"}
 
 [커머스 코드 자산화 개발일지 - 1 시작](https://www.popit.kr/%EC%BB%A4%EB%A8%B8%EC%8A%A4-%EC%BD%94%EB%93%9C-%EC%9E%90%EC%82%B0%ED%99%94-%EA%B0%9C%EB%B0%9C%EC%9D%BC%EC%A7%80-1-%EC%8B%9C%EC%9E%91){:target="_blank"}
 
 
-## frontend
+### frontend
 [자바스크립트는 무엇으로 구성되어있을까?](https://ui.toast.com/weekly-pick/ko_20200219/?fbclid=IwAR223IgHrlPBXj--4Dj5LBsAWZI-pfwAHKKQShqldn9FLkHgkrBPSmCgHk8){:target="_blank"}
 
 
-# 사업
+## 사업
 [혼자 일한 지 5년 통장에 돈은 좀 모였을까.](https://brunch.co.kr/@roysday/454?fbclid=IwAR2f0Ss3zfj2p2cBBW0YAAJUHQvFrpZML82eUGhJoxCp-FCG8rC-NDI-iJM){:target="_blank"}
 
 [재결제율을 80%까지 올린 HR 컨설턴트의 조언 “OKR이나 KPI에 매달리지 마라, 팀의 BM에 맞는 시스템이 중요하다”](https://ppss.kr/archives/212513){:target="_blank"}
@@ -26,8 +26,8 @@ comments: true
 
 [태극당 신경철 전무가 알려주는 브랜딩 전략!](https://www.facebook.com/watch/?v=2810310069046712){:target="_blank"}
 
-# 디자인
+## 디자인
 [카페24 무료폰트](https://fonts.cafe24.com/){:target="_blank"}
 
-# 키워드
+## 키워드
 1인창조기업
