--- a/_posts/2020-02-20-TIL.md
+++ b/_posts/2020-02-20-TIL.md
@@ -21,7 +21,8 @@ comments: true
 
 [\[도커\] spring boot + gradle 배포 정리.](https://wfreud.tistory.com/277){:target="_blank"}
 
-
+#### 쿠버네티스
+[쿠버네티스 #1 소개](https://bcho.tistory.com/1255?category=731548){:target="_blank"}
 
 ### frontend
 [자바스크립트는 무엇으로 구성되어있을까?](https://ui.toast.com/weekly-pick/ko_20200219/?fbclid=IwAR223IgHrlPBXj--4Dj5LBsAWZI-pfwAHKKQShqldn9FLkHgkrBPSmCgHk8){:target="_blank"}
