--- a/_posts/2020-02-24-TIL.md
+++ b/_posts/2020-02-24-TIL.md
@@ -10,9 +10,11 @@ comments: true
 ### 파이썬
 
 파이썬 상대경로 문제가 발생했다. 
-[https://itmining.tistory.com/122](\[Python\] 파이썬 파일과 디렉토리 경로){:target="_blank"}
 
-[https://myjorney.tistory.com/52](\[파이썬 상대경로 import 에러\] ImportError: attempted relative import with no known parent package){:target="_blank"}
+[\[Python\] 파이썬 파일과 디렉토리 경로](https://itmining.tistory.com/122){:target="_blank"}
+
+[\[파이썬 상대경로 import 에러\] ImportError: attempted relative import with no known parent package](https://myjorney.tistory.com/52){:target="_blank"}
+
 
 
 
