--- a/_posts/2020-02-24-TIL.md
+++ b/_posts/2020-02-24-TIL.md
@@ -7,6 +7,8 @@ comments: true
 
 ## 서버
 
+[\[Git\] Github에 잘못 올라간 파일 삭제하기 - Heee's Development Blog](https://gmlwjd9405.github.io/2018/05/17/git-delete-incorrect-files.html){:target="_blank"}
+
 ### 파이썬
 
 파이썬 상대경로 문제가 발생했다. 
@@ -15,6 +17,10 @@ comments: true
 
 [\[파이썬 상대경로 import 에러\] ImportError: attempted relative import with no known parent package](https://myjorney.tistory.com/52){:target="_blank"}
 
+## 사업
 
+출석관리 서비스
+
+[365Manager](http://www.365manager.co.kr/info/service_info01){:target="_blank"}
 
 
