--- a/_posts/2020-02-26-TIL.md
+++ b/_posts/2020-02-26-TIL.md
@@ -47,3 +47,10 @@ RabbitMQ의 메세지 보유기간은 acknowledge에 기반합니다. ack를 받
 consumer 가 메시지를 처리하는 것을 명시적으로 지정할 수 있는 것 같다. 위의 listener on/off 와 같은 맥락
 파이썬 pika는 start_consuming() / stop_consuming()  
 [BlockingConnection](https://pika.readthedocs.io/en/stable/modules/adapters/blocking.html#pika.adapters.blocking_connection.BlockingChannel.stop_consuming){:target="_blank"}
+
+
+
+## 일
+
+재택근무의 온도차가 있지.. 고용주와 노동자의 온도차이. 그래도 점차 재택근무가 활성화 되길 바라는 마음이다.
+[재택근무를 위한 마음의 자세](https://brunch.co.kr/@ioojoo/61){:target="_blank"}
