--- a/_posts/2020-03-04-TIL.md
+++ b/_posts/2020-03-04-TIL.md
@@ -14,3 +14,10 @@ comments: true
 ## 책
 재밌어 보이는 책 발견. 개발자의 디자인 능력을 키워주는 책 같다.
 [개발자의 디자인 독해력](http://www.kyobobook.co.kr/product/detailViewKor.laf?mallGb=KOR&ejkGb=KOR&linkClass=331903&barcode=9791165210762){:target="_blank"}
+
+
+## 디지털노마드
+디지털 노마드, 그리고 재택근무를 꿈꿨는데 코로나로 인해 갑자기 하게 되었다.
+
+다른 사람들의 리모트 근무  
+[리모트 근무 회고](https://jybaek.tistory.com/862){:target="_blank"}
