--- a/_posts/2020-03-04-TIL.md
+++ b/_posts/2020-03-04-TIL.md
@@ -21,3 +21,10 @@ comments: true
 
 다른 사람들의 리모트 근무  
 [리모트 근무 회고](https://jybaek.tistory.com/862){:target="_blank"}
+
+## 데일리리포트/데일리플랜
+[성장을 위한 시도와 실패의 연속](https://brunch.co.kr/@karma87/12){:target="_blank"}
+
+[2019년, '이것'만 알면 당신은 무조건 바뀐다](https://jolggu.tistory.com/279){:target="_blank"}
+
+[완벽한 공부법](https://blog.naver.com/magnoliaaaa/220923125906){:target="_blank"}
