--- a/_posts/2020-03-07-TIL.md
+++ b/_posts/2020-03-07-TIL.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: 제목
+title: 2020-03-07-TIL
 author: Derek Choi
-comments: 2020-03-07-TIL
+comments: true
 ---
 
 ## 프로젝트
-[<프로덕트 리더십> 팀의 역할은 무엇인가?](https://brunch.co.kr/@ywkim36/15){:target="_blank"}
+[\<프로덕트 리더십\> 팀의 역할은 무엇인가?](https://brunch.co.kr/@ywkim36/15){:target="_blank"}
 
 ## 블로그
 
@@ -37,6 +37,7 @@ ubuntu 에서 docker 설치하고 활용하는 메뉴얼
 
 [How to host multiple flask apps under a single domain hosted on nginx?](https://stackoverflow.com/questions/34692600/how-to-host-multiple-flask-apps-under-a-single-domain-hosted-on-nginx){:target="_blank"}
 
+[🐳 Docker 시작해보기 :: #1 기본개념 🖥️](https://jinblog.kr/232){:target="_blank"}
 
 ## 데이터분석
 ### 케글
