--- a/_posts/2020-03-12-TIL.md
+++ b/_posts/2020-03-12-TIL.md
@@ -26,6 +26,13 @@ https://www.notion.so/d8bc2c5bd8614839839f63fb3a42acb6?v=c6a7abceb398460ca600767
 python 에서 postgresql 사용  
 [Python PostgreSQL tutorial](http://zetcode.com/python/psycopg2/){:target="_blank"}
 
+### python unittest
+[unittest — 단위 테스트 프레임워크¶](https://docs.python.org/ko/3/library/unittest.html){:target="_blank"}
+
+[코드 테스트하기¶](https://python-guide-kr.readthedocs.io/ko/latest/writing/tests.html){:target="_blank"}
+
+
+
 ## 클라이언트
 ### bootstrap
 가운데 정렬 하기  
