--- a/_posts/2020-03-12-TIL.md
+++ b/_posts/2020-03-12-TIL.md
@@ -4,6 +4,10 @@ title: 2020-03-12-TIL
 author: Derek Choi
 comments: true
 ---
+## GIT
+연습하자.  
+[좋은 git commit 메시지를 위한 영어 사전](https://blog.ull.im/engineering/2019/03/10/logs-on-git.html){:target="_blank"}
+
 
 ## IDE
 
@@ -42,3 +46,4 @@ python 에서 postgresql 사용
 ### skeleton
 부트스트랩 대체제  
 [skeleton](http://getskeleton.com/#intro){:target="_blank"}
+
