--- a/_posts/2020-03-16-TIL.md
+++ b/_posts/2020-03-16-TIL.md
@@ -14,7 +14,11 @@ pycharm 에서 pytest를 기본으로 사용하기
 sqlAlchemy 로깅 설정  
 [SQLAlchemy에서 Query 로그 보기¶](https://til.songyunseop.com/python/logging_sqlalchemy.html){:target="_blank"}
 
+### docker
+우분투에 도커 설치하기  
+[도커 설치 - 우분투](https://devbrain.tistory.com/46){:target="_blank"}
 
+[Get Docker Engine - Community for Ubuntu](https://docs.docker.com/install/linux/docker-ce/ubuntu/){:target="_blank"}
 
 
 
