--- a/_posts/2020-03-16-TIL.md
+++ b/_posts/2020-03-16-TIL.md
@@ -20,6 +20,14 @@ sqlAlchemy 로깅 설정
 
 [Get Docker Engine - Community for Ubuntu](https://docs.docker.com/install/linux/docker-ce/ubuntu/){:target="_blank"}
 
+### docker-compose 
+우분투에 도커 컴포즈 설치하기  
+[docker-compose 설치](https://devbrain.tistory.com/47?category=710710){:target="_blank"}
 
+### flask
+플라스크에 대한 좋은 자료  
+[Application factory pattern | Learning Flask Ep. 30](https://pythonise.com/series/learning-flask/application-factory-pattern-%7C-learning-flask-ep.-30){:target="_blank"}
+
+[Install Docker Compose](https://docs.docker.com/compose/install/){:target="_blank"}
 
 
