--- a/_posts/2020-04-08-TIL.md
+++ b/_posts/2020-04-08-TIL.md
@@ -1,20 +1,24 @@
 ---
 layout: post
-title: 2020-04-08-TIL
+title: 2020-04-09-TIL
 author: Derek Choi
 comments: true
 ---
 
-## Tools
-### IntelliJ SDK 설정  
-새로운 장비에 기존 환경을 마이그레이션 하였다.  
-jdk 를 새로 설치하고 나서 해당 path를 잡아줘야 했다.  
+## Client
+### Android
+Dino's Blog
+[Notion – The all-in-one workspace for your notes, tasks, wikis, and databases.](https://www.notion.so/Dino-s-Blog-a45713395ae248c7b71c6a6f99feb53b){:target="_blank"}
 
-[\[Java\] Intellij에서 Java/JDK 설정](https://inma.tistory.com/147){:target="_blank"}
+## Server
+### Python Flask
+입력된 조건에 대해서 사칙연산을 해야 되는데, 도움이 될까해서 검색해 봄.  
+[괄호를 처리할 수 있는 사칙연산 계산기 (Python) · Wireframe](https://soooprmx.com/archives/5845){:target="_blank"}
 
-## Serverr
-### Spring Boot test
-[\[스프링부트 (9)\] SpringBoot Test(2) - @SpringBootTest로 통합테스트 하기](https://goddaehee.tistory.com/211){:target="_blank"}
+## Data
+### Python
+아나콘다(anaconda) 설치후에 환경에 대한 포스팅
+[파이썬 개발환경](https://velog.io/@noyo0123/%ED%8C%8C%EC%9D%B4%EC%8D%AC-%EA%B0%9C%EB%B0%9C%ED%99%98%EA%B2%BD){:target="_blank"}
 
-[스프링부트 테스트(1)](https://brunch.co.kr/@springboot/207){:target="_blank"}
-
+## 공간
+[호퍼의 그림을 닮은 상수동 집 | 신세계 빌리브](https://villiv.co.kr/people/5920){:target="_blank"}
