--- a/_posts/2020-04-12-TIL.md
+++ b/_posts/2020-04-12-TIL.md
@@ -8,3 +8,9 @@ comments: true
 ## Android
 리사이클러 뷰에 여러 item 화면 넣기  
 [\[안드로이드\] 리사이클러뷰(RecyclerVeiw) xml 뷰 여러개 사용하는 법 (뷰홀더 2개 이상)](https://youngest-programming.tistory.com/69){:target="_blank"}
+
+[Android 깨알 팁 3 — Adapter View Type](https://medium.com/@jsuch2362/android-%EA%B9%A8%EC%95%8C-%ED%8C%81-3-adapter-view-type-46b3fd071fff){:target="_blank"}
+
+[\[Android\] 안드로이드 - RecyclerView의 ViewType 구분하기](https://lktprogrammer.tistory.com/190){:target="_blank"}
+
+[Node.js +Android Studio(Kotlin) 채팅 구현하기(1)](https://rlg1133.tistory.com/41){:target="_blank"}
