--- a/_posts/2020-04-17-TIL.md
+++ b/_posts/2020-04-17-TIL.md
@@ -31,3 +31,11 @@ MDC 1.0.0 -> 1.1.0 으로 마이그레이션
 ## 스크래치
 레퍼런스 식이 아니라 흥미있어보임.  
 [송쌤의 스크래치 코딩 학교](http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9791188621699&orderClick=LAG&Kc=){:target="_blank"}
+
+## flask
+blueprint에 등록된 url 확인   
+[flask blueprints list routes](https://stackoverflow.com/questions/30081802/flask-blueprints-list-routes){:target="_blank"}
+```
+ urls = [str(p) for p in app.url_map.iter_rules()]
+ print(urls)
+```
