--- a/_posts/2020-04-17-TIL.md
+++ b/_posts/2020-04-17-TIL.md
@@ -39,3 +39,7 @@ blueprint에 등록된 url 확인
  urls = [str(p) for p in app.url_map.iter_rules()]
  print(urls)
 ```
+
+## Bootstrap 4
+알기 쉽게 정리  
+['Frameworks/Bootstrap' 카테고리의 글 목록](https://coding-restaurant.tistory.com/category/Frameworks/Bootstrap?page=1){:target="_blank"}
