--- a/_posts/2020-04-17-TIL.md
+++ b/_posts/2020-04-17-TIL.md
@@ -43,3 +43,9 @@ blueprint에 등록된 url 확인
 ## Bootstrap 4
 알기 쉽게 정리  
 ['Frameworks/Bootstrap' 카테고리의 글 목록](https://coding-restaurant.tistory.com/category/Frameworks/Bootstrap?page=1){:target="_blank"}
+
+부트스트랩 달력  
+[Bootstrap 4  달력 : datetimepicker (Bootstrap 3버전 업그레이드 버전) 인기 달력](https://blog.edit.kr/entry/Bootstrap-4-%EB%8B%AC%EB%A0%A5-datetimepicker-Bootstrap-3%EB%B2%84%EC%A0%84-%EC%97%85%EA%B7%B8%EB%A0%88%EC%9D%B4%EB%93%9C-%EB%B2%84%EC%A0%84-%EC%9D%B8%EA%B8%B0-%EB%8B%AC%EB%A0%A5){:target="_blank"}
+
+치트시트  
+[Bootstrap 4 Cheat Sheet - The ultimate list of Bootstrap classes](https://hackerthemes.com/bootstrap-cheatsheet/#){:target="_blank"}
