--- a/_posts/2020-04-22-TIL.md
+++ b/_posts/2020-04-22-TIL.md
@@ -16,3 +16,7 @@ Dockerfile 정적분석
 ## Html
 여러개 checkbox 값을 보낼 때  
 [Form에서 CheckBox 배열 하나로 다중 input 값 선택적 전송하기](https://yeop-blog.github.io/2017/10/02/2017-10-02-old-blog-post83/){:target="_blank"}
+
+## PostgreSql
+json 형식 저장  
+[PostgreSQL의 JSON 데이터 타입 오퍼레이터 :: Outsider's Dev Story](https://blog.outsider.ne.kr/1061){:target="_blank"}
