--- a/_posts/2020-05-07-TIL.md
+++ b/_posts/2020-05-07-TIL.md
@@ -14,9 +14,15 @@ comments: true
 안드로이드 터치 이벤트 전파  
 [\[Android\] 안드로이드의 Touch Event 는 어떻게 전달 될까? (with. Touch Intercept)](https://readystory.tistory.com/185){:target="_blank"}
 
+텍스트에 배경 넣기
+[Drawing a rounded corner background on text](https://medium.com/androiddevelopers/drawing-a-rounded-corner-background-on-text-5a610a95af5){:target="_blank"}
+
 ### Advanced
 리사이틀러뷰 팁들. 채팅 화면 만들기 예제  
 [Android Chat Interface Using RecyclerView and Groupie](https://medium.com/swlh/android-chat-interface-using-recyclerview-and-groupie-9c1a67e28e3e){:target="_blank"}
+
+코인으로 DI  
+[Dependency Injection with Koin](https://medium.com/swlh/dependency-injection-with-koin-6b6364dc8dba){:target="_blank"}
 
 MVVM 설명  
 [MVVM on Android with the Architecture Components + Koin](https://medium.com/swlh/mvvm-on-android-with-the-architecture-components-koin-f53c3c200363){:target="_blank"}
