--- a/_posts/2020-05-07-TIL.md
+++ b/_posts/2020-05-07-TIL.md
@@ -39,3 +39,7 @@ MVVM 설명
 
 ## 사회
 [\[한국의 실리콘밸리,판교\] 코로나로 매출 0원, 이 스타트업들이 살아남는 법](https://news.joins.com/article/23772480?log=NewsLetterS23772480&cloc=joongang|newsletter|star){:target="_blank"}
+
+## Data
+대용량 파일 처리할때 Pandas 대체제  
+[\[ Python \] modin 으로 pandas 더 빠르게 사용하기](https://data-newbie.tistory.com/279?category=750452){:target="_blank"}
