--- a/_posts/2020-05-25-TIL.md
+++ b/_posts/2020-05-25-TIL.md
@@ -28,6 +28,12 @@ celery import 가 잘 안된다.
 답은 celery.py 로 파일 명을 정하면 import 에러가 나는 문제였다...  
 [Django - ImportError: cannot import name Celery](https://stackoverflow.com/questions/45236100/django-importerror-cannot-import-name-celery){:target="_blank"}
 
+celery 돌릴때 import 에러   
+[\[파이썬 상대경로 import 에러\] ImportError: attempted relative import with no known parent package](https://myjorney.tistory.com/52){:target="_blank"}
+
+celery 모듈 경로  
+[关于celery的bug解决方法：AttributeError: module 'celery_tasks' has no attribute 'celery'](https://blog.csdn.net/weixin_43162402/article/details/83314692){:target="_blank"}
+
 
 ## Android
 다국어에 대한 처리  
