--- a/_posts/2020-05-18-TIL.md
+++ b/_posts/2020-05-18-TIL.md
@@ -25,8 +25,7 @@ users = segment_users[['cage_episode_id', 'cage_segment_condition_id', 'cage_seg
 
 ## Data
 Keggle Beginner Guide 캐글 비기너 가이드  
-[1 캐글 입문자를 위한 가이드 문서](https://unfinishedgod.github.io/docs/kaggle/Kaggle_beginner_guide/kaggle_beginner_guide.html){:target="_blank"}
-
+[캐글 입문자를 위한 가이드 문서 - 미완성의신](https://unfinishedgod.netlify.app/2020/03/22/%EC%BA%90%EA%B8%80-%EC%9E%85%EB%AC%B8%EC%9E%90%EB%A5%BC-%EC%9C%84%ED%95%9C-%EA%B0%80%EC%9D%B4%EB%93%9C-%EB%AC%B8%EC%84%9C/){:target="_blank"}
 
 ## Git
 ^[[A[Github 프로필에 나의 Daliy 코딩 시간을 적용해보자!](https://fernando.kr/develop/2020-05-02-github-gist-posting/){:target="_blank"}
