ingress buffer 설정 변경

--- a/_posts/2020-09-17-TIL.md
+++ b/_posts/2020-09-17-TIL.md
@@ -40,3 +40,7 @@ Java 8 컴파일 문제
 ## Javascript
 글자 수 세기  
 [\[Javascript\] 글자수 체크, 문자열 길이 구하기(한글 포함)](https://juein.tistory.com/44){:target="_blank"}
+
+## Kubernetes
+파일 업로드시 413 에러 발생  
+[File upload limit in Kubernetes & Nginx](https://blog.pragtechnologies.com/file-upload-limit-in-kubernetes/){:target="_blank"}
