--- a/_posts/2020-09-17-TIL.md
+++ b/_posts/2020-09-17-TIL.md
@@ -44,3 +44,7 @@ Java 8 컴파일 문제
 ## Kubernetes
 파일 업로드시 413 에러 발생  
 [File upload limit in Kubernetes & Nginx](https://blog.pragtechnologies.com/file-upload-limit-in-kubernetes/){:target="_blank"}
+
+## Postgresql
+파티셔닝  
+[\[PostgreSQL\] 테이블 Range Partition 정리](https://hochoon-dev.tistory.com/74){:target="_blank"}
