--- a/_posts/2020-09-17-TIL.md
+++ b/_posts/2020-09-17-TIL.md
@@ -48,3 +48,5 @@ Java 8 컴파일 문제
 ## Postgresql
 파티셔닝  
 [\[PostgreSQL\] 테이블 Range Partition 정리](https://hochoon-dev.tistory.com/74){:target="_blank"}
+공식 문서  
+[ddl-partitioning](https://www.postgresql.org/docs/11/ddl-partitioning.html){:target="_blank"}
