--- a/_posts/2020-10-30-TIL.md
+++ b/_posts/2020-10-30-TIL.md
@@ -13,3 +13,7 @@ comments: true
 ## SQL
 여러 테이블 join 에 대한 정리  
 [Learn SQL: Join multiple tables](https://www.sqlshack.com/learn-sql-join-multiple-tables/){:target="_blank"}
+
+
+## Design
+[어도비 XD - 웹디자인 작업과정 : Blank Page to Final Design](https://designup3.tistory.com/114){:target="_blank"}
