--- a/_posts/2020-10-30-TIL.md
+++ b/_posts/2020-10-30-TIL.md
@@ -17,3 +17,6 @@ comments: true
 
 ## Design
 [어도비 XD - 웹디자인 작업과정 : Blank Page to Final Design](https://designup3.tistory.com/114){:target="_blank"}
+
+Adobe XD 사용안내서  
+[Adobe XD User Guide](https://helpx.adobe.com/kr/xd/user-guide.html/kr/xd/help/welcome.ug.html){:target="_blank"}
