--- a/_posts/2020-10-30-TIL.md
+++ b/_posts/2020-10-30-TIL.md
@@ -20,3 +20,7 @@ comments: true
 
 Adobe XD 사용안내서  
 [Adobe XD User Guide](https://helpx.adobe.com/kr/xd/user-guide.html/kr/xd/help/welcome.ug.html){:target="_blank"}
+
+## 통계
+통계 관련 카페  
+[통계학에 관한 모든것 : 네이버 카페](https://cafe.naver.com/sw4r){:target="_blank"}
