--- a/_posts/2020-10-30-TIL.md
+++ b/_posts/2020-10-30-TIL.md
@@ -24,3 +24,6 @@ Adobe XD 사용안내서
 ## 통계
 통계 관련 카페  
 [통계학에 관한 모든것 : 네이버 카페](https://cafe.naver.com/sw4r){:target="_blank"}
+
+## 디자이너 글 링크 모음  
+[서핏 - 디자이너를 위한 모든 디자인 콘텐츠](https://www.surfit.io/){:target="_blank"}
