--- a/_posts/2020-11-03-TIL.md
+++ b/_posts/2020-11-03-TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 제목
+title: 2020-11-03-TIL
 author: Derek Choi
 comments: true
 ---
@@ -8,3 +8,7 @@ comments: true
 ## Android
 ViewBinding 으로 갈아타기  
 [Migrating the deprecated Kotlin Android Extensions compiler plugin to ViewBinding](https://proandroiddev.com/migrating-the-deprecated-kotlin-android-extensions-compiler-plugin-to-viewbinding-d234c691dec7){:target="_blank"}
+
+## Data
+nltk 사용  
+[\[NLP\] Day 14 - Phrase](https://leechamin.tistory.com/136){:target="_blank"}
