--- a/_posts/2020-11-03-TIL.md
+++ b/_posts/2020-11-03-TIL.md
@@ -12,3 +12,6 @@ ViewBinding 으로 갈아타기
 ## Data
 nltk 사용  
 [\[NLP\] Day 14 - Phrase](https://leechamin.tistory.com/136){:target="_blank"}
+
+chunk로 구 phrase 구분  
+[Chap03 -1 : Creating Custom Corpora(corpus, chunk)](https://excelsior-cjh.tistory.com/69?category=928322){:target="_blank"}
