--- a/_posts/2020-12-01-TIL.md
+++ b/_posts/2020-12-01-TIL.md
@@ -12,6 +12,24 @@ comments: true
 recyclerview onclick 다른 예제 정리  
 [안드로이드 코틀린으로 만든 리사이클러뷰(RecyclerView)에 클릭 기능 추가하기 (Add ClickListener)](https://dalgonakit.tistory.com/139){:target="_blank"}
 
+viewpager2 스크롤  
+[Android Infinite Auto Image Slider Using View Pager 2 | Android Studio | Java](https://www.youtube.com/watch?v=iA9iqygq11Q){:target="_blank"}
+
+viewpager2 자동 넘기기
+[\[Android\] 안드로이드 - view Pager 자동으로 넘기기 (소스코드)](https://salix97.tistory.com/90){:target="_blank"}
+
+viewpager2 자동 넘기기, 코루틴 사용  
+[\[배달의 민족\] UI 따라만들기 3편 (Viewpager2, Coroutine, LifecycleScope)](https://programmar.tistory.com/29?category=883390){:target="_blank"}
+
+viewpager 자동 넘기는 코드  
+[How to create carousel viewpager2 or infinite loop/endless scroll in android viewpager2](https://gist.github.com/vidyesh95/1b3179b8ed566281bed28e00486d1721){:target="_blank"}
+
+bannerview  
+[zhpanvip/BannerViewPager](https://github.com/zhpanvip/BannerViewPager){:target="_blank"}
+
+Handler
+[android handler 로 timer 구현](https://greedy0110.tistory.com/22){:target="_blank"}
+
 ## PostgreSql
 idle in transaction 발생  
 [\[DB\] Postgres와 Django의 Connection 관리](https://chrisjune-13837.medium.com/postgres%EC%99%80-django%EC%9D%98-connection-%EA%B4%80%EB%A6%AC-5acf3f5c28a7){:target="_blank"}
